# aura-research

./: .gitignore  LICENSE  README.md  pyproject.toml
research/: __init__.py  cli.py  compiler.py  config.py  ingest.py  linter.py  prompts.py  query.py  search.py  web.py
